--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jade": "~1.11.0",
+    "lodash": "^4.13.1",
     "mongoose": "^4.4.20",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
